# test_occ_learning

./: 00headers.h  CMakeLists.txt  README.md  common.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/: 01Bottle.cpp  02ModelingData.cpp  03ModelingAlgorithms.cpp  readme_1二维曲线映射到3D曲面.md  readme_3box面顺序.md  readme_3拔模.md  readme_Handle.md  readme_HollowShellLoft.md  readme_adaptor适配器.md  readme_容差.md  readme_抽象基类与子类.md
